--- a/memory-game/index.html
+++ b/memory-game/index.html
@@ -12,83 +12,83 @@
     <div class="game-container">
         <div class="game-piece" id="0">
             <div class="front"></div>
-            <div class="back"></div>
+            <div class="back icon"></div>
         </div>
         <div class="game-piece" id="1">
             <div class="front"></div>
-            <div class="back"></div>
+            <div class="back icon"></div>
         </div>
         <div class="game-piece" id="2">
             <div class="front"></div>
-            <div class="back"></div>
+            <div class="back icon"></div>
         </div>
         <div class="game-piece" id="3">
             <div class="front"></div>
-            <div class="back"></div>
+            <div class="back icon"></div>
         </div>
         <div class="game-piece" id="4">
             <div class="front"></div>
-            <div class="back"></div>
+            <div class="back icon"></div>
         </div>
         <div class="game-piece" id="5">
             <div class="front"></div>
-            <div class="back"></div>
+            <div class="back icon"></div>
         </div>
         <div class="game-piece" id="6">
             <div class="front"></div>
-            <div class="back"></div>
+            <div class="back icon"></div>
         </div>
         <div class="game-piece" id="7">
             <div class="front"></div>
-            <div class="back"></div>
+            <div class="back icon"></div>
         </div>
         <div class="game-piece" id="8">
             <div class="front"></div>
-            <div class="back"></div>
+            <div class="back icon"></div>
         </div>
         <div class="game-piece" id="9">
             <div class="front"></div>
-            <div class="back"></div>
+            <div class="back icon"></div>
         </div>
         <div class="game-piece" id="10">
             <div class="front"></div>
-            <div class="back"></div>
+            <div class="back icon"></div>
         </div>
         <div class="game-piece" id="11">
             <div class="front"></div>
-            <div class="back"></div>
+            <div class="back icon"></div>
         </div>
         <div class="game-piece" id="12">
             <div class="front"></div>
-            <div class="back"></div>
+            <div class="back icon"></div>
         </div>
         <div class="game-piece" id="13">
             <div class="front"></div>
-            <div class="back"></div>
+            <div class="back icon"></div>
         </div>
         <div class="game-piece" id="14">
             <div class="front"></div>
-            <div class="back"></div>
+            <div class="back icon"></div>
         </div>
         <div class="game-piece" id="15">
             <div class="front"></div>
-            <div class="back"></div>
+            <div class="back icon"></div>
         </div>
         <div class="game-piece" id="16">
             <div class="front"></div>
-            <div class="back"></div>
+            <div class="back icon"></div>
         </div>
         <div class="game-piece" id="17">
             <div class="front"></div>
-            <div class="back"></div>
+            <div class="back icon"></div>
         </div>
         <div class="game-piece" id="18">
             <div class="front"></div>
-            <div class="back"></div>
+            <div class="back icon"></div>
         </div>
         <div class="game-piece" id="19">
             <div class="front"></div>
-            <div class="back"></div>
+            <div class="back icon"></div>
         </div>
     </div>
         <div class="game-over">
