--- a/memory-game/index.html
+++ b/memory-game/index.html
@@ -9,6 +9,13 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:500" rel="stylesheet">
 </head>
 <body>
+    <div class="upperbody">
+        <div class="title">The Memory Game</div>
+        <div class="counters">
+            <div class="moves">Moves: <span id="moves"></span></div>
+            <div class="time">Time: <span id="time"></span></div>
+        </div>
+    </div>
     <div class="game-container">
         <div class="game-piece" id="0">
             <div class="front"></div>
