--- a/AjaxRequests/index.html
+++ b/AjaxRequests/index.html
@@ -9,10 +9,17 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:500,600" rel="stylesheet">
 </head>
 <body>
+    <div class="submit-player">
+        <input name="name"></input>
+        <input name="quote"></input>
+        <input name="pic-url"></input>
+        <div class="submit">submit</div>
+    </div>
     <ul class="list">
             <li class="ask" data-id="0"></li>
             <li class="ask" data-id="1"></li>
             <li class="ask" data-id="2"></li>
+            <li class="ask" data-id="3"></li>
     </ul>
     <div class="central-stripe"></div>
     <main>
