--- a/AjaxRequests/index.html
+++ b/AjaxRequests/index.html
@@ -9,20 +9,21 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:500,600" rel="stylesheet">
 </head>
 <body>
-    <div class="submit-player">
-        <input name="name"></input>
-        <input name="quote"></input>
-        <input name="pic-url"></input>
-        <div class="submit">submit</div>
-    </div>
-    <ul class="list">
-            <li class="ask" data-id="0"></li>
-            <li class="ask" data-id="1"></li>
-            <li class="ask" data-id="2"></li>
-            <li class="ask" data-id="3"></li>
-    </ul>
-    <div class="central-stripe"></div>
     <main>
+    <ul class="list">
+        <li class="ask" data-id="0"></li>
+        <li class="ask" data-id="1"></li>
+        <li class="ask" data-id="2"></li>
+        <li class="ask" data-id="3"></li>
+    </ul>
+    <div class="submit-player">
+        <div class="title">Insert New RockStar</div>
+        <input name="name" placeholder="Name of the RockStar"></input>
+        <input name="quote" placeholder="Quote"></input>
+        <input name="pic-url" placeholder="Url of the image"></input>
+        <div class="submit">SUBMIT</div>
+    </div>
+    <div class="central-stripe"></div>
     <div class="player-container">
             <div class="pic"></div>
             <div class="name"></div>
