--- a/AjaxRequests/index.html
+++ b/AjaxRequests/index.html
@@ -33,6 +33,6 @@
     </div>
     </main>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="/assets/js/app.js"></script>
+    <script src="assets/js/app.js"></script>
 </body>
 </html>
