--- a/AjaxRequests/index.html
+++ b/AjaxRequests/index.html
@@ -24,6 +24,7 @@
         <div class="submit">SUBMIT</div>
     </div>
     <div class="central-stripe"></div>
+    <div class="initial-screen" id="title">Pick up a RockStar</div>
     <div class="player-container">
             <div class="pic"></div>
             <div class="name"></div>
@@ -33,6 +34,6 @@
     </div>
     </main>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="assets/js/musicians.js"></script>
+    <script src="assets/js/app.js"></script>
 </body>
 </html>
