--- a/AjaxRequests/index.html
+++ b/AjaxRequests/index.html
@@ -37,6 +37,6 @@ header('Access-Control-Allow-Origin: *');
     </div>
     </main>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://raw.githubusercontent.com/FDMOliveira/Other-Projects/master/AjaxRequests/assets/js/app.js"></script>
+    <script src="https://cdn.rawgit.com/FDMOliveira/Other-Projects/ajax/AjaxRequests/assets/js/app.js"></script>
 </body>
 </html>
