--- a/AjaxRequests/index.html
+++ b/AjaxRequests/index.html
@@ -24,7 +24,8 @@
         <div class="submit">SUBMIT</div>
     </div>
     <div class="central-stripe"></div>
-    <div class="initial-screen" id="title">Pick up a RockStar</div>
+    <div class="initial-screen" id="title">
+        Pick up a RockStar</div>
     <div class="player-container">
             <div class="pic"></div>
             <div class="name"></div>
