--- a/AjaxRequests/index.html
+++ b/AjaxRequests/index.html
@@ -20,8 +20,7 @@
     <div class="player-container">
             <div class="pic"></div>
             <div class="name"></div>
-            <div class="quote">
-                "<span id="quote"></span>"
+            <div class="quote">"<span id="quote"></span>"
             </div>
         </div>
     </div>
